crates/nash-report/src/snapshots/nash_report__canonicalize__tests__kind_mismatch.snap
---
source: crates/nash-report/src/canonicalize.rs
expression: "crate::render_plain(&to_report(&source, &error), &source, \"Main.nash\")"
---
nash::names::kind_mismatch

  × Kind mismatch in the type annotation.
   ╭─[Main.nash:1:1]
 1 │ name = other
   · ────
   ╰────
  help: Expected kind `Type`, found `Type -> Type`.
