crates/nash-report/src/snapshots/nash_report__canonicalize__tests__missing_module_header.snap
---
source: crates/nash-report/src/canonicalize.rs
expression: "crate::render_plain(&to_report(&source, &error), &source, \"Main.nash\")"
---
nash::names::missing_module_header

  × Missing module declaration.
  help: Add `module Main exposing (..)` at the start of the file.
