crates/nash-report/src/snapshots/nash_report__canonicalize__tests__not_found_var.snap
---
source: crates/nash-report/src/canonicalize.rs
description: "module Main exposing (..)\nresult = name\n"
---
nash::names::not_found_var

  × Unknown variable `name`.
   ╭─[Main.nash:2:10]
 1 │ module Main exposing (..)
 2 │ result = name
   ·          ────
   ╰────
  help: Similar names:

            result
            Builtin.trace
            Builtin.bData
            Builtin.iData
