crates/nash-report/src/snapshots/nash_report__canonicalize__tests__not_found_var_with_suggestion.snap
---
source: crates/nash-report/src/canonicalize.rs
description: "module Main exposing (..)\nname = 1\nother = 2\nresult = naem\n"
---
nash::names::not_found_var

  × Unknown variable `naem`.
   ╭─[Main.nash:4:10]
 3 │ other = 2
 4 │ result = naem
   ·          ────
   ╰────
  help: Similar names:

            name
            other
            result
            Builtin.bData
