crates/nash-report/src/snapshots/nash_report__canonicalize__tests__validator_main_not_exposed.snap
---
source: crates/nash-report/src/canonicalize.rs
expression: "crate::render_plain(&to_report(&source, &error), &source, \"Main.nash\")"
---
nash::validator::main_not_exposed

  × This validator module does not expose main.
   ╭─[Main.nash:1:1]
 1 │ name = other
   · ─
   ╰────
  help: Add main to the exposing list.
